# vidmirror

./: .gitignore  Makefile  main.py  pyproject.toml
src/vidmirror/: ffmpeg.py  main.py
src/vidmirror/static/: app.js  index.html  style.css
