[project]
name = "vidmirror"
version = "0.1.0"
description = "Upload a video, choose a mirror/flip effect, preview and download the processed result"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vidmirror"]
